WIP Converting project to be modular