@@ -1,3 +1,5 @@
+import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+
 /*
  * This file was generated by the Gradle 'init' task.
  *
@@ -9,8 +11,6 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
-    id "com.github.johnrengelman.shadow" version "5.2.0"
 }
 
 repositories {
@@ -18,20 +18,31 @@ repositories {
     jcenter()
 }
 
+def javaFXPlatform = getJavaFXPlatform()
+def javaFXVersion = "15.0.1"
+
 dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13'
 
+    implementation "org.openjfx:javafx-base:${javaFXVersion}:${javaFXPlatform}"
+    implementation "org.openjfx:javafx-controls:${javaFXVersion}:${javaFXPlatform}"
+    implementation "org.openjfx:javafx-graphics:${javaFXVersion}:${javaFXPlatform}"
+
     // This dependency is used by the application.
-    implementation 'com.google.guava:guava:29.0-jre'
-    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
-    implementation 'com.calendarfx:view:11.8.3'
-    implementation 'eu.hansolo:tilesfx:11.48'
+    //implementation 'com.google.guava:guava:29.0-jre'
+    //implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
+
+    implementation ('com.calendarfx:view:11.8.3'){
+        exclude module: 'javafx.controls;'
+    }
+
+    //implementation 'eu.hansolo:tilesfx:11.48'
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
-// https://mvnrepository.com/artifact/org.json/json
+    // https://mvnrepository.com/artifact/org.json/json
     implementation group: 'org.json', name: 'json', version: '20090211'
-// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore
     implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.14'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
@@ -40,20 +51,7 @@ dependencies {
 
 
 
-    compile 'com.jfoenix:jfoenix:9.0.10'
-
-    run {
-    jvmArgs = [
-        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
-            "--add-opens=javafx.controls/com.sun.javafx.scene.control=com.jfoenix"
-    ]
-}
-
+    //compile 'com.jfoenix:jfoenix:9.0.10'
 
 
 
@@ -63,26 +61,29 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'Artemis.App'
+    mainClass.set('Artemis.App')
+
 }
 
-javafx{
-    version = "15.0.1"
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
+java{
+    modularity.inferModulePath.set(true)
 }
 
 mainClassName = 'Artemis.App'
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'Artemis.App'
-        )
+private static String getJavaFXPlatform() {
+    def currentOS = DefaultNativePlatform.currentOperatingSystem;
+    if (currentOS.isWindows()) {
+        return 'win'
+    } else if (currentOS.isLinux()) {
+        return 'linux'
+    } else if (currentOS.isMacOsX()) {
+        return 'mac'
     }
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
+    return null
 }
+
+
 
 
 
